shared/template.css
:root {
	--primary-background-color: rgb(52, 123, 152);
	--primary-text-color: white;

	--secondary-background-color: rgb(190, 238, 255);
	--secondary-text-color: black;
}

body {
	display: grid;
	grid-template-rows: auto auto 1fr auto;
}

header {
	background-color: var(--primary-background-color);
	color: var(--primary-text-color);
}

header>h1 {
	margin: 10px;
	text-align: center;
	font-size: 40px;
	font-weight: normal;
}

header>p {
	margin: 10px;
	text-align: center;
}

#top-nav {
	display: grid;
	grid-template-columns: repeat(2, minmax(10px, 1fr)) 48px;
}

#top-nav>a>button {
	width: 100%;
	font-size: 20px;
	padding: 6px;
	border: 1px solid black;
	border-left: none;
	border-radius: 0;
	cursor: pointer;
	background-color: var(--primary-background-color);
	color: var(--primary-text-color);
}

#top-nav>a:last-child>button {
	border-right: none;
}

#top-nav>a>button.active {
	background-color: var(--secondary-background-color);
	border-bottom-color: var(--secondary-background-color);
	color: black;
}

main {
	background-color: var(--secondary-background-color);
}

footer {
	width: 100%;
	min-height: 30px;
	padding: 5px;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	border: 1px dashed black;
}

footer>*:last-child {
	text-align: right;
}

footer>span {
	grid-column: 2 / 3;
	text-align: center;
}

@media (max-width: 599px) {
	main {
		min-height: calc(100vh - 10px - 48px);
	}

	footer {
		height: 48px;
		grid-template-columns: 1fr 1fr;
	}

	footer>span {
		grid-row: 1;
		grid-column: 1 / 3;
	}
}

